<resources>
    <string name="app_name">Assignment2</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="result">Result:</string>
    <string name="firstNumber">First number</string>
    <string name="secondNumber">Second number</string>
</resources>