<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#9DC0F6">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-180dp"
        android:layout_marginBottom="100dp">


        <EditText
            android:id="@+id/firstNumber"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:autofillHints="Enter first number"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/firstNumber"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />


        <EditText
            android:id="@+id/secondNumber"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Enter second number"
            android:hint="@string/secondNumber"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/firstNumber"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/plus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/plus"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNumber" />

    <Button
        android:id="@+id/minus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/minus"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondNumber" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:textSize="30sp"
        android:text="@string/multiply"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/divide"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/divide"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>
</LinearLayout>